[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursaves"
version = "0.10.6"
description = "Sync Cursor agent chat sessions between machines"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = ["InquirerPy>=0.3.4"]

[project.optional-dependencies]
s3 = ["boto3"]

[project.scripts]
cursaves = "cursor_saves.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cursor_saves"]

[project.urls]
Repository = "https://github.com/Callum-Ward/cursaves"
